--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
 		<script type="text/javascript" src="js/flipcounter.js"></script>
 
 	</head><body>
-	<section>
-		<div class="w-container content up">
+	<section class="up">
+		<div class="w-container content">
 			<header class="w-clearfix header">
-				<img class="logo" src="images/guarantee.png" width="120" alt="logo.jpg">
+				<div class="logo">
+					<img src="images/crestlogo.png" alt="crestlogo.png">
+					<h1 class="slogan"> Обрети белоснежную улыбку<br> за 7 дней!</h1>
+	
+				</div>
+				
 				<div class="connection">
 					<a class="phone-link" href="callto:84994092492">+7(499)409-24-92</a>
 					<br/>
@@ -30,25 +35,24 @@
 
 					<div class="phone-button button">
 						<a href="#">
-							<img src="images/buttons/phone.png" width="30">
+							<img src="images/buttons/phone.png" width="25">
 								Заказать бесплатный звонок	
 						</a>
 					</div>
 				</div>
-				<h1 class="slogan"> Обрети белоснежную улыбку<br> за 7 дней!</h1>
 			</header>
 			<div class="w-clearfix presentation">
 				<div class="action">
 					<h3>Акция!</h3>
 					<h4 class="action-head"> Отбеливающие полоски<br/> 
 					<span class="accent">Crest 3D Intensive <br>Professional Effects<strong>-30%</strong></span></h4>
-					<img class="action-trigger" src="images/1.jpg" height="110" alt="3.jpg">
+					<img class="action-trigger" src="images/foraction.png" height="90" alt="3.jpg">
 
 					<div class="actions w-clearfix">
 						<div class="action-text">старая цена: <p class="old-price">4650 руб.</p>
 							<p class="new-price">новая цена: </p><p class="new-price">3250 руб.</p></div>
 					</div>
-					<div class="button">
+					<div class="buttonsub">
 						<a href="#">
 							Участвовать в акции
 						</a>
@@ -57,7 +61,7 @@
 			</div>
 			<div class="w-row bonuses">
 				<div class="w-col w-col-4 w-clearfix">
-					<img class="bonus-face" src="images/guarantee.png" width="100" alt="phone%20rebel.jpg">
+					<img class="bonus-face" src="images/guarant.png" width="100" alt="phone%20rebel.jpg">
 					<div class="guarantee">Мы гарантируем, что Ваши зубы 
 						станут белее на 4-6 тонов или
 						мы вернем вам деньги!</div>
@@ -67,7 +71,7 @@
 					<div class="guarantee">Вся наша продукция прошла необходимую сертификацию</div>
 				</div>
 				<div class="w-col w-col-4 w-clearfix">
-					<img class="bonus-face" src="images/delivery1.png" width="100" alt="phone%20rebel.jpg">
+					<img class="bonus-face" src="images/delivery.png" width="100" alt="phone%20rebel.jpg">
 					<div class="guarantee">Бесплатная доставка по Москве при заказе на сумму свыше 5000 рублей</div>
 				</div>
 			</div>
@@ -75,14 +79,15 @@
 	</section>
 	<section class="feedfon">
 		<div class="w-container content feedbackslide">
+			<h3>Отзывы наших клиентов</h3>
 			<div class="w-hidden-small w-hidden-tiny feedback">
 				<img class="feed-face" src="images/feedback/small/feedsample1.jpg" alt="client2.jpg">
 			</div>
 			<div class="feedback">
-				<img class="feed-face" src="images/feedback/small/feedsample2.jpg" alt="client2.jpg">
+				<img class="feed-face" src="images/feedback/small/feedsample5.jpg" alt="client2.jpg">
 			</div>
 			<div class="w-hidden-small w-hidden-tiny feedback">
-				<img class="feed-face" src="images/feedback/small/feedsample3.jpg" alt="client2.jpg">
+				<img class="feed-face" src="images/feedback/small/feedsample4.jpg" alt="client2.jpg">
 			</div>
 		</div>
 	</section>
@@ -119,7 +124,7 @@
 			</div>
 		</div>
 	</section>
-	<section>
+	<section class="allfears">
 		<div class="w-container content fears w-clearfix">
 			<h3>Пять главных страхов при отбеливании зубов</h3>
 			<div class="problem">
@@ -340,10 +345,10 @@
 				</div>
 
 				<div class="w-col w-col-4">
-					<div class="back-call button">
+					<div class="back-call buttonsub">
 						<a  href="#">
 							<img src="images/buttons/phone.png" width="30">
-							заказать обратный звонок
+							заказать бесплатную консультацию
 						</a>
 					</div>
 				</div>
