--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
 					<h3>Акция!</h3>
 					<h4 class="action-head"> Отбеливающие полоски<br/> 
 					<span class="accent">Crest 3D Intensive <br>Professional Effects<strong>-30%</strong></span></h4>
-					<img class="action-trigger" src="images/foraction.png" height="90" alt="3.jpg">
 
 					<div class="actions w-clearfix">
+						<img class="action-trigger" src="images/foraction.png" height="90" alt="3.jpg">
+
 						<div class="action-text">старая цена: <p class="old-price">4650 руб.</p>
 							<p class="new-price">новая цена: </p><p class="new-price">3250 руб.</p></div>
 					</div>
@@ -128,7 +129,7 @@
 		<div class="w-container content fears w-clearfix">
 			<h3>Пять главных страхов при отбеливании зубов</h3>
 			<div class="problem">
-				<div><img src="images/exclamation.png"> Это очень дорого!</div>
+				<div><img src="images/exclamation.png"> Обычно это очень дорого!</div>
 			</div>
 			<div class="solution">
 				<div>Комплект отбеливающих полосок Crest 3D Whitestrips стоит намного дешевле, чем отбеливание в стоматологической клинике. Вы экономите до 15 тыс. руб., но в итоге получаете точно такой же результат, так как в состав отбеливающих полосок входят те же самые компоненты, что и в средства для профессионального отбеливания в клиниках.</div>
@@ -140,20 +141,20 @@
 				<div>После использования отбеливающих полосок Crest 3D Whitestrips, мы гарантируем, что ваши зубы станут белее на 4-6 тонов, или мы вернем Вам деньги!</div>
 			</div>
 			<div class="problem">
-				<div><img src="images/exclamation.png"> Повысится чувствительность зубов</div>
+				<div><img src="images/exclamation.png"> Слышала, что повышается чувствительность зубов</div>
 			</div>
 			<div class="solution">
 				<div>Некоторые люди могут испытывать повышение чувствительности зубов во время использования полосок Crest 3D Whitestrips. Повышенная чувствительность проходит после окончания курса и не является опасной, при повышении чувствительности Вы можете сделать перерыв в 1-2 дня, а также использовать пасту для чувствительных зубов Crest Sensitivity, понижающую чувствительность на 50%.</div>
 			</div>
 			<div class="problem">
-				<div><img src="images/exclamation.png"> Отбеливание вредит эмали зубов</div>
+				<div><img src="images/exclamation.png"> Мне кажется, отбеливание вредит эмали зубов</div>
 			</div>
 			<div class="solution">
 				<div>Использование отбеливающих полосок Crest 3D Whitestrips абсолютно безопасно для эмали зубов. Независимое исследование компании Kelton Research доказало безопасность и эффективность Crest Whitestrips. Система отбеливания Crest 3D White признана брендом #1 в мире, который советуют использовать в домашних условиях профессиональные стоматологи.</div>
 			</div>
 
 			<div class="problem">
-				<div><img src="images/exclamation.png"> Процесс отбеливания занимает много времени</div>
+				<div><img src="images/exclamation.png"> Говорят, процесс отбеливания занимает много времени</div>
 			</div>
 			<div class="solution">
 				<div>Отбеливающие полоски Crest 3D Whitestrips очень просты и удобны в использовании. 
@@ -163,15 +164,15 @@
 				<div class="w-row steps">
 				<div class="w-col w-col-4 good">
 					<h4 class="step">Шаг 1</h4>Снимите защитное покрытие с полоски.
-					<img class="goods-face" src="images/3steps/1_over.jpg" alt="1step">
+					<img class="goods-face" src="images/3steps/1_over.png" alt="1step">
 				</div>
 				<div class="w-col w-col-4 good">
 					<h4 class="step">Шаг 2</h4>Встаньте перед зеркалом и приложите полоску гелевой стороной к зубам, затем выровняйте ее по линии десен и плотно прижмите.
-					<img class="goods-face" src="images/3steps/2_over.jpg" alt="2.jpg">
+					<img class="goods-face" src="images/3steps/2_over.png" alt="2.jpg">
 				</div>
 				<div class="w-col w-col-4 good">
 					<h4 class="step">Шаг 3</h4>Для лучшего отбеливания загните выступающие края полоски. Удалите полоски через 30 минут или 2 часа в зависимости от системы отбеливания и аккуратно почистите зубы.
-					<img class="goods-face" src="images/3steps/3_over.jpg" alt="7FJ2EWwny6s.jpg">
+					<img class="goods-face" src="images/3steps/3_over.png" alt="7FJ2EWwny6s.jpg">
 				</div>
 			</div>
 
@@ -338,23 +339,27 @@
 		
 			<div class="w-row">
 				<div class="w-col w-col-4">
-					© здесь может и даже должна находиться информация о копирайте<br/>
-					также можно укзать год создания<br/>
-					если есть, допустим, ИНН<br/>
-					и ещё раз телефон для связи<br/>
+
+					ООО "Дарим улыбку" 2011-2013<br/>
+					(c) Все права защищены<br/>
+					Следите за нашими новостями<br/>
+					 и новыми улыбками в Instagram: <a href="instagram.com">crest_luxury_smile</a><br/>
+					ОГРН: 1117746125231<br/>
 				</div>
 
 				<div class="w-col w-col-4">
 					<div class="back-call buttonsub">
 						<a  href="#">
-							<img src="images/buttons/phone.png" width="30">
-							заказать бесплатную консультацию
+							<img src="images/buttons/phone.png" width="30"></img>
+							Заказать бесплатную консультацию
 						</a>
 					</div>
 				</div>
 				<div class="w-col w-col-4">
-					Остались вопросы? Звоните - поможем!
-					+7(499)409-24-92
+					<h5>
+						Остались вопросы? Звоните - поможем!
+						+7(499)409-24-92
+					</h5>
 				</div>
 			</div>
 		</div>
